--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <nav class="fixed w-full z-20 top-0 start-0">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="https://www.linkedin.com/in/andr%C3%A9-luis-vasconcelos-a401bb29b/" target="_blank" rel="noopener noreferrer" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img src="/drezin.jpeg" class="h-8" alt="Flowbite Logo">
+      <img src="drezin.jpeg" class="h-8" alt="Flowbite Logo">
     </a>
     
   <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
@@ -152,23 +152,23 @@
     <div class="relative h-[600px] md:h-[600px] lg:h-[500px] overflow-hidden rounded-lg">
       <!-- Item 1 -->
       <div class="hidden duration-700 ease-in-out" data-carousel-item="active">
-        <img src="/image.png" class="absolute block w-full h-full object-cover" alt="Imagem 1">
+        <img src="image.png" class="absolute block w-full h-full object-cover" alt="Imagem 1">
       </div>
       <!-- Item 2 -->
       <div class="hidden duration-700 ease-in-out" data-carousel-item>
-        <img src="/image1.png" class="absolute block w-full h-full object-cover" alt="Imagem 2">
+        <img src="image1.png" class="absolute block w-full h-full object-cover" alt="Imagem 2">
       </div>
       <!-- Item 3 -->
       <div class="hidden duration-700 ease-in-out" data-carousel-item>
-        <img src="/image2.png" class="absolute block w-full h-full object-cover" alt="Imagem 3">
+        <img src="image2.png" class="absolute block w-full h-full object-cover" alt="Imagem 3">
       </div>
 
       <div class="hidden duration-700 ease-in-out" data-carousel-item>
-        <img src="/image3.png" class="absolute block w-full h-full object-cover" alt="Imagem 2">
+        <img src="image3.png" class="absolute block w-full h-full object-cover" alt="Imagem 2">
       </div>
 
       <div class="hidden duration-700 ease-in-out" data-carousel-item>
-        <img src="/image4.png" class="absolute block w-full h-full object-cover" alt="Imagem 2">
+        <img src="image4.png" class="absolute block w-full h-full object-cover" alt="Imagem 2">
       </div>
     </div>
 
