--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </a>
     
   <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-    <button type="button" onclick="window.open('https://www.linkedin.com/in/andr%C3%A9-luis-vasconcelos-a401bb29b/', '_blank')" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+    <button type="button" onclick="window.open('https://www.linkedin.com/in/andrevasconcelosf/', '_blank')" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
       Saiba Mais
     </button>    
       <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-sticky" aria-expanded="false">
@@ -257,7 +257,7 @@
         <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2025 Feito por <a href="https://flowbite.com/" class="hover:underline">André Vasconcelos</a>. 
         </span>
         <div class="flex mt-4 sm:justify-center sm:mt-0">
-          <a href="https://www.linkedin.com/in/andr%C3%A9-luis-vasconcelos-a401bb29b/" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
+          <a href="https://www.linkedin.com/in/andrevasconcelosf/" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
             <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
                 <path d="M4.98 3.5C4.98 4.88 3.88 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5zM1 8h3V21H1V8zm7-2h3v2.5h.05c.42-.8 1.45-1.64 2.98-1.64 3.19 0 3.77 2.1 3.77 4.83V21h-3v-7c0-1.7-.03-3.89-2.36-3.89-2.37 0-2.73 1.85-2.73 3.76V21H8V6z"/>
             </svg>
